# SOP

./: .gitignore  CMakeLists.txt  README.md
res/scenes/: testscene.rmsop
res/shader/: 3dproj_shader.frag  3dproj_shader.vert  basic_shader.frag  basic_shader.vert  raymarching_shader.frag
src/: application.cpp  camera.cpp  camera.hpp  mesh.cpp  mesh.hpp  projection.hpp  projscene.cpp  projscene.hpp  raymarching.hpp  rm.cpp  rm.hpp  rmscene.cpp  rmscene.hpp  ui.cpp  ui.hpp
